# BinnAgentX

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Dockerfile  Dockerfile.frontend  README.md  SECURITY.md  compose.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml  openwiki-update.yml
apps/control-cockpit/: next.config.ts  package.json  tsconfig.json
apps/learner-web/: next.config.ts  package.json  vitest.setup.ts
docs/: 00-研究结论与立项建议.md  01-市场与竞品调研.md  02-英语一英语二考试模型.md  03-产品愿景与用户需求.md  04-MVP-PRD.md  05-训练系统与教学规范.md  06-数据模型与效果评估.md  07-合规版权与风险清单.md  08-产品发现与研发路线图.md  09-资料来源.md  10-外部词汇工具接入策略.md  11-OpenWiki使用手册.md  12-读写能力技术研究与落地框架.md  13-Agent与IRT-CAT技术路线.md  14-双实验室产品定位与竞争力分析.md  15-认知激活与前端学习交互.md  16-技术栈调研与架构选型.md  17-首次体验页面状态与埋点清单.md  18-首次体验事件契约与前后端责任矩阵.md  19-技术Spike章程与开工门槛.md  20-首个纵向切片与桌面交互规格.md  21-编码前决策登记与ADR清单.md  22-合法测试内容包与权利台账规范.md  23-工程与评测基线.md  24-本地开发与验证手册.md  25-环境变量与运行边界契约.md  26-工程骨架验收记录.md  27-首个纵向切片领域实现记录.md  28-跨任务运行编排与保守匹配实现记录.md  29-桌面学习工作区实现记录.md  30-H1最小帮助与V2闭环实现记录.md  31-微型表达单项反馈与V2闭环实现记录.md  32-受约束模型网关与确定性降级实现记录.md  33-连续训练与学习首页实现记录.md  34-登录流程与模型接入迁移记录.md  35-方法论.md  36-表达实验室创意点.md  37-语境实验室创新点.md  38-皮肤系统优化.md  39-皮肤系统统一规范.md  (+7 more)
docs/adr/: ADR-0001-技术Spike证据边界.md  ADR-0002-桌面唯一终端与浏览器矩阵.md  ADR-0003-双前端与权限隔离.md  ADR-0004-单一事实源与不可变证据.md  README.md
logs/: deploy.image-fingerprint
openwiki/: .last-update.json  INSTRUCTIONS.md  delivery-roadmap.md  evidence-and-compliance.md  product-model.md  quickstart.md  source-map.md  training-system.md
scripts/: deploy.sh  reset_development.py
tests/: browser-diagnostics.ts  conftest.py
(+256 files in other folders)
